--- a/openalex_database_dbml_diagram.html
+++ b/openalex_database_dbml_diagram.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height:100%;width:100%;text-align:center;">
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Database Schema</title>
 </head>
-<body>
-   <div>
-   <iframe  style="width: 1550px; height: 720px;" src="https://dbdocs.io/embed/965c95a3e10f1253fd9c26ebf560f371/2df92c4b99894783baf9ffa1fbdfd6b0"> </iframe>
-   </div>
+<body style="height:100%;width:100%;margin:0;">
+    <div style="height:100%;width:100%;">
+        <iframe style="width:100%;height:100%" src="https://dbdocs.io/embed/965c95a3e10f1253fd9c26ebf560f371/2df92c4b99894783baf9ffa1fbdfd6b0"> </iframe>
+    </div>
 </body>
 </html>
